Fix issue found by findbugs.